<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/blue_0188cc">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="onBack"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/modify_network_settings"
            android:textColor="@color/white_ffffff"
            android:textSize="17sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_f2f2f2"
            android:orientation="vertical"
            android:paddingBottom="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onWifiSettings"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/wifi_settings"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onMqttSettings"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/mqtt_settings"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onNetworkSettings"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/network_settings"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="53dp"
                android:background="@drawable/shape_corner_btn_bg"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onConnect"
                android:text="Connect"
                android:textColor="@color/white_ffffff"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>