<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/blue_0188cc">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onBack"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Settings"
            android:textColor="@color/white_ffffff"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:onClick="onEditName"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/edit_name" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onIndicatorSettings"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/indicator_settings"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onNetworkStatusReportInterval"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/network_status_report_interval"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onReconnectTimeout"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/reconnect_timeout"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onCommunicationTimeout"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/communication_timeout"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onDataReportTimeout"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/data_report_timeout"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onSystemTime"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/system_time"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onButtonReset"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/reset_device_by_button"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_adv_state"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/ic_cb_close"
                android:gravity="center_vertical"
                android:onClick="onAdvSettings"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="Advertise settings"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onOTA"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="OTA"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onModifyMqttSettings"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/modify_network_settings"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white_ffffff"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onDeviceInfo"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/more_device_info"
                android:textColor="@color/black_333333"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="53dp"
                android:background="@drawable/shape_corner_btn_bg"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onRebootDevice"
                android:text="Reboot"
                android:textColor="@color/white_ffffff"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="53dp"
                android:background="@drawable/shape_corner_btn_bg"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onResetDevice"
                android:text="Reset Device"
                android:textColor="@color/white_ffffff"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>